kubernetes/components/networkpolicies/allow-internet/allow-http-https-world-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-http-https-world-egress
spec:
  endpointSelector: {}   # applies to all pods in this namespace
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
